update RL content

--- a/LaTeX報告/2_machine_learning.tex
+++ b/LaTeX報告/2_machine_learning.tex
@@ -2,7 +2,7 @@
 \section{類神經網絡}
 \begin{figure}[hbt!]
 \begin{center}
-\includegraphics[width=16cm]{{類神經網路架構}
+\includegraphics[width=16cm]{類神經網路架構}
 \caption{\Large 類神經網路架構}\label{類神經網路架構}
 \end{center}
 \end{figure}
