--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -185,7 +185,7 @@ Application of reinforcement
 %=---------------附錄-----------------=%
 \addcontentsline{toc}{chapter}{附錄} %新增目錄名稱
 \input{9_appendix.tex}
-%=-------------作者簡介-----------------=%也是抄的
+%=-------------作者簡介-----------------=%
     \addcontentsline{toc}{chapter}{作者簡介}
     \begin{center}
 	\fontsize{20pt}{0em}\selectfont \bf{作者簡介}\\
