--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -153,13 +153,7 @@ Application of reinforcement
 \addcontentsline{toc}{chapter}{誌~~~謝}
 \centerline\LARGE\textbf{誌~~謝}\\
 \begin{flushleft}
-\fontsize{14pt}{2.5pt}\hspace{12pt}在此鄭重感謝製作以及協助本專題完成的所有人員，首先向大
-四學長致謝，他們不辭辛勞解決我們的提問，甚至從來
-沒有不耐煩，總是貼心為我們找出最佳解答。再來是我們的
-指導教授嚴家銘教授，他給了我們全方位的支援，開會時也時不時
-向我們提出建議以及未來走向，同時也給了我們能自由摸索的空間
-及時間，最後是由本專題組員同心協力才得以完成本題目，特此感
-謝。
+\fontsize{14pt}{2.5pt}\hspace{12pt}在此鄭重感謝製作以及協助本專題完成的所有人員，首先向大四學長致謝，他們不辭辛勞解決我們的提問，甚至從來沒有不耐煩，總是貼心為我們找出最佳解答。再來是我們的指導教授嚴家銘教授，他給了我們全方位的支援，開會時也時不時向我們提出建議以及未來走向，同時也給了我們能自由摸索的空間及時間，最後是由本專題組員同心協力才得以完成本題目，特此感謝。
 \end{flushleft}
 \newpage
 %=------------------------目錄----------------------=%
@@ -171,7 +165,7 @@ Application of reinforcement
 \listoffigures
 \newcommand{\captioname}{圖}
 \newpage
-\end{center}
+
 %=-------------------------內容----------------------=%
 \input{1_introduction.tex}
 \input{2_machine_learning.tex}
