--- a/IEEE/0_Abstract.tex
+++ b/IEEE/0_Abstract.tex
@@ -1,12 +1,11 @@
 \begin{center}
-\fontsize{11pt}{16pt}\sectionef\hspace{12pt} 摘要
+\fontsize{11pt}{0}\sectionef
+摘要
 \end{center}
 \begin{flushleft}
-%\fontsize{10pt}{16pt}\sectionef\hspace{12pt} 
-產業中的需求提升因而生產、製造、研發等效率需要有所提升，最佳化的方式能有的提升效率。本專題將以實體冰球機的機電系統簡化進行強化學習，並結合類神經網路，測試不同演算法使冰球機對打控制系統最佳化，並嘗試將其算法應用到實體機電系統上。\\[12pt]
+\qquad 本文目的是將實體機電系統簡化後導入虛擬環境並證明簡化後訓練的強化學習能算法能在虛擬環境中應用。
 
-%\fontsize{10pt}{16pt}\sectionef\hspace{12pt} 
-此專題是運用實體冰球對打機，將其導入CoppeliaSim模擬環境並給予對應設置，將其機電系統簡化並運用Open AI Gym進行訓練，找到適合此系統的演算法後，再到CoppeliaSim模擬環境中進行測試演算法在實際運用上的可行性。並嘗試透過架設伺服器將CoppeliaSim影像串流到網頁供使用者觀看或操控。\\[12pt]
+\qquad 將實體冰球機的機電系統簡化成一個自由度導入CoppeliaSim模擬環境透過Remote API控制環境中的冰球機移動，OpenCV來處理影像，強化學習訓練利用Open AI Gym的Pong Game測試參數。
 
 \end{flushleft}
 \begin{center}
