--- a/IEEE/IEEE.tex
+++ b/IEEE/IEEE.tex
@@ -1,9 +1,9 @@
 \documentclass[10pt,a4paper,twocolumn]{report}  %紙張設定
 \usepackage{xeCJK}%中文字體模組
-%\setCJKmainfont{標楷體} %設定中文字體
-\setCJKmainfont{MoeStandardKai.ttf}
-%\newfontfamily\sectionef{Times New Roman}%設定英文字體
-\newfontfamily\sectionef{Nimbus Roman}
+\setCJKmainfont{標楷體} %設定中文字體
+%\setCJKmainfont{MoeStandardKai.ttf}
+\newfontfamily\sectionef{Times New Roman}%設定英文字體
+%\newfontfamily\sectionef{Nimbus Roman}
 \usepackage{enumerate}
 \usepackage{amsmath,amssymb}%數學公式、符號
 \usepackage{amsfonts} %數學簍空的英文字
@@ -11,8 +11,8 @@
 \usepackage{fontawesome5} %引用icon
 \usepackage{type1cm} %調整字體絕對大小
 \usepackage{textpos} %設定文字絕對位置
-\usepackage[top=2.5truecm,bottom=2.5truecm,
-left=3truecm,right=2.5truecm]{geometry}
+\usepackage[top=3truecm,bottom=3truecm,
+left=2truecm,right=2truecm]{geometry}
 \usepackage{titlesec} %目錄標題設定模組
 \usepackage{titletoc} %目錄內容設定模組
 \usepackage{textcomp} %表格設定模組
@@ -40,7 +40,8 @@ left=3truecm,right=2.5truecm]{geometry}
 \usepackage{appendix} %附錄
 \usepackage{diagbox}%引用表格
 \usepackage{multirow}%表格置中
-\fontsize{11pt}{2.5pt}\sectionef
+
+
 \begin{document}
 
 
