--- a/IEEE/IEEE.tex
+++ b/IEEE/IEEE.tex
@@ -11,8 +11,6 @@
 \usepackage{fontawesome5} %引用icon
 \usepackage{type1cm} %調整字體絕對大小
 \usepackage{textpos} %設定文字絕對位置
-\usepackage[top=3truecm,bottom=3truecm,
-left=2truecm,right=2truecm]{geometry}
 \usepackage{titlesec} %目錄標題設定模組
 \usepackage{titletoc} %目錄內容設定模組
 \usepackage{textcomp} %表格設定模組
@@ -40,6 +38,11 @@ left=2truecm,right=2truecm]{geometry}
 \usepackage{appendix} %附錄
 \usepackage{diagbox}%引用表格
 \usepackage{multirow}%表格置中
+%======== 版 面 設 定 ========%
+
+\usepackage[top=3truecm,bottom=3truecm,
+left=2truecm,right=2truecm]{geometry}
+\setlength\columnsep{23.7pt}%調整雙欄位的中間間隔距離
 
 
 \begin{document}
