--- a/IEEE/2_LiteratureReview.tex
+++ b/IEEE/2_LiteratureReview.tex
@@ -1,2 +1,4 @@
-\chapter{Literature Review}\label{chap:2}
-\qquad 內容
+\chapter{Literature Review}
+Atari Video Computer System 是Atari Inc在1977年9月11日發行的一款家用遊戲機，直到1982年更名為Atari 2600，Pong是第一個主要發行的遊戲。OpenAI是一個人工智慧研究實驗室，研究著重於強化學習，Gym 具有多種不同的環境，並以標準化定義環境，其中包括Atari 2600的遊戲、Classic control、Box2D等環境供機器學習訓練使用。\\
+
+\qquad Pong是一個2D的運動遊戲，模擬乒乓球對打，透過影像識別擊錘及球的位置訓練一個
