--- a/IEEE/IEEE.tex
+++ b/IEEE/IEEE.tex
@@ -42,14 +42,12 @@
 
 \usepackage[top=3truecm,bottom=3truecm,
 left=2truecm,right=2truecm]{geometry}
-\setlength\columnsep{23.7pt}%調整雙欄位的中間間隔距離
+\setlength\columnsep{1cm}%調整雙欄位的中間間隔距離
 
 \begin{document}
-%{\let\clearpage\relax }
 %=-------------------------內容----------------------=%
 \input{0_Abstract.tex}
 \input{1_Introduction.tex}
-
 \input{2_LiteratureReview.tex}
 \input{3_DesignProcess.tex}
 
