--- a/IEEE/0_Abstract.tex
+++ b/IEEE/0_Abstract.tex
@@ -1,15 +1,12 @@
 \begin{center}
-\fontsize{11pt}{0}\sectionef
 摘要
 \end{center}
-\begin{flushleft}
-\qquad 本文目的是將實體機電系統簡化後導入虛擬環境並證明簡化後訓練的強化學習能算法能在模擬環境中應用。
+\qquad 本文目的是將實體機電系統簡化後導入虛擬環境並證明簡化後訓練的強化學習能算法能在模擬環境中應用。\\
 
-\qquad 將實體冰球機的機電系統的雙自由度簡化成一個自由度導入CoppeliaSim模擬環境透過Remote API控制環境中的冰球機移動，OpenCV來處理影像提供強化學習訓練和訓練後實際控制的輸入，強化學習訓練利用OpenAI Gym的Pong Game測試適合的訓練參數，再將此算法套用到CoppeliaSim的場景中進行訓練。
+將實體冰球機的機電系統的雙自由度簡化成一個自由度導入CoppeliaSim模擬環境透過Remote API控制環境中的冰球機移動，OpenCV來處理影像提供強化學習訓練和訓練後實際控制的輸入，強化學習訓練利用OpenAI Gym的Pong Game測試適合的訓練參數，再將此算法套用到CoppeliaSim的場景中進行訓練。\\
 
-\qquad 該研究為了證實相同的訓練算法能套用到不同真實程度的環境中進行訓練(，相同訓練參數套用到模擬環境中進行訓練，依舊能訓練出像樣的對打系統。)
+該研究為了證實相同的訓練算法能套用到不同真實程度的環境中進行訓練(，相同訓練參數套用到模擬環境中進行訓練，依舊能訓練出像樣的對打系統。)\\
 
-\end{flushleft}
 \begin{center}
 \fontsize{10pt}{20pt}\selectfont 關鍵字: 類神經網路、強化學習、\sectionef CoppeliaSim、OpenAI Gym
 \end{center}
