--- a/IEEE/1_Introduction.tex
+++ b/IEEE/1_Introduction.tex
@@ -1,5 +1,7 @@
-\chapter{介紹}\label{chap:1}
-\qquad 近年來硬體技術、軟體、自動求導等技術快速發展起來，再次帶起機器學習的發展，促使機器學習與各領域結合的應用越來越廣泛，在機電系統採用強化學習是為了讓機電系統的控制達到最佳化。本研究以實體的冰球機(圖.\ref{fig.冰球機})之機電系統作為訓練模型，將實體機器轉移到虛擬環境(圖.\ref{fig.模擬冰球機})進行模擬，為了找到適合的演算方式，因此將模型簡化(圖.\ref{fig.pong_gym})後再進行測試各種算法的優劣，透過不斷的訓練來得到一個優化過的對打系統。\\
+\chapter{介紹}
+ 近年來硬體技術、軟體、自動求導等技術快速發展起來，再次帶起機器學習的發展，促使機器學習與各領域結合的應用越來越廣泛，在機電系統採用強化學習是為了讓機電系統的控制達到最佳化。本研究利用強化學習優化冰球機的對打系統，並測試相同演算法運用在2D與3D模擬環境可行性。\\
+
+ 本研究分成兩大部分，第一部分簡化冰球機並運用OpenAI Gym的Atari Pong-v0測試較合適的訓練參數，在2D環境中進行強化學習的對打訓練。第二部分獎實體系統簡化後導入CoppeliaSim模擬環境導入測試完成的訓練參數進行虛擬訓練，進行算法導入到實體機前的測試。\\
 
 \begin{figure}[hbt!]
 \begin{center}
