--- a/IEEE/3_DesignProcess.tex
+++ b/IEEE/3_DesignProcess.tex
@@ -1,8 +1,11 @@
 \chapter{設計流程}
-\section{研究動機}
-機器學習與各領域結合的應用越來越廣泛，在機電系統採用強化學習是為了讓機電系統的控制達到最佳化。本專題以實體的冰球機(圖.\ref{fig.冰球機})之機電系統作為訓練模型，將實體機器轉移到虛擬環境(圖.\ref{fig.模擬冰球機})進行模擬，為了找到適合的演算方式，因此將模型簡化(圖.\ref{fig.pong_gym})後再進行測試各種算法的優劣，透過不斷的訓練來得到一個優化過的對打系統。\\
+\section{簡化模型}
+將冰球機簡化成一個自由度，簡化後與Pong的操控相同，並分別透過2D遊戲Pong-v0與3D模擬環境CoppilaSim供強化學習訓練。
 
-\section{研究目的與方法}
+\section{機器學習訓練}
+透過影像處理，過濾出擊錘與球，並將兩幀影像進行比較，透過調整環境參數與決策參數的權重，環境參數使用ReLU Function進行優化，決策參數則是透過Log probability和Softmax進行運算
+
+\section{模擬環境}
  本研究分三大部分，第一運用OpenAI Gym裡內建編譯的ATARI 2600遊戲Pong-v0，來作為訓練環境，加上強化學習的理論，測試不同演算法以訓練出最佳化的對打系統，第二換為CoppilaSim模擬環境並套用訓練程式，成為優化的對打機電系統。第三則是透過架設伺服器與虛擬環境結合。\\
  
  利用Gym的訓練環境來測試不同的算法所得到的訓練結果，比較不同算法、參數間的差異，並找出較適合Pong game的算法、參數，循序漸進提高環境的真實程度，來減少一開始就是以實體的方式測試所帶來硬體、程式、時間和金錢等成本。\\
