--- a/IEEE/IEEE.tex
+++ b/IEEE/IEEE.tex
@@ -38,19 +38,25 @@
 \usepackage{appendix} %附錄
 \usepackage{diagbox}%引用表格
 \usepackage{multirow}%表格置中
+%======== 版 面 設 定 ========%
+\usepackage[margin=2.5cm]{geometry}
+%\setlength\columnsep{1cm}%調整雙欄位的中間間隔距離
+%=------------------更改標題內容----------------------=%
+\titleformat{\chapter}{\sectionef\fontsize{12pt}{0pt}\bfseries}{\thesection}{0em}{}
+\titleformat{\section}[hang]{\sectionef\fontsize{12pt}{2.5pt}\bfseries}{{\thesection}}{0em}{}[]
+\titleformat{\subsection}[hang]{\sectionef\fontsize{12pt}{2.5pt}\bfseries}{{\thesubsection}}{0em}{}[]
+%=------------------頁首----------------------=%
 \usepackage{fancyhdr}%頁首頁尾
 \pagestyle{fancy}
-%======== 版 面 設 定 ========%
-
-\usepackage[top=2.5truecm,bottom=2.5truecm,
-left=2.5truecm,right=2.5truecm]{geometry}
-%\setlength\columnsep{1cm}%調整雙欄位的中間間隔距離
-
-\begin{document}
-\hspace{-3em}
-\rhead{Proceedings of 2021 International Conference on Mechatronic, Automobile, and Environment Engineering\\
+\renewcommand{\headrulewidth}{0pt}%去除頁首橫線
+\fontsize{9pt}{9pt}\selectfont
+\fancyhead[R]{\vspace{-1.5em} Proceedings of 2021 International Conference on Mechatronic, Automobile, and Environment Engineering\\
 October 22-24, 2021, Hualien, Taiwan\\
 Paper ID：xxxx}
+
+\begin{document}
+
+
 %=-------------------------標題----------------------=%
 \begin{center}
 \fontsize{22pt}{22pt}\selectfont\textbf{Application of reinforcement
