--- a/IEEE/1_Introduction.tex
+++ b/IEEE/1_Introduction.tex
@@ -8,19 +8,23 @@
 
 \begin{figure}[hbt!]
 \begin{center}
-\includegraphics[width=3cm]{冰球機}
+\subfigure{
+\begin{minipage}[t]{0.3\linewidth}  %設定圖片間距
+\includegraphics[width=4cm]{冰球機}
 \caption{實體的冰球機}\label{fig.冰球機}
-\end{center}
-\end{figure}
-\begin{figure}[hbt!]
-\begin{center}
-\includegraphics[width=3cm]{origin}
+\end{minipage}
+}
+\subfigure{
+\begin{minipage}[t]{0.3\linewidth}
+\includegraphics[width=4cm]{origin}
 \caption{虛擬環境簡化後的冰球機}\label{fig.模擬冰球機}
-\end{center}
-\end{figure}
-\begin{figure}[hbt!]
-\begin{center}
-\includegraphics[width=3cm]{pong_gym}
+\end{minipage}
+}
+\subfigure{
+\begin{minipage}[t]{0.3\linewidth} 
+\includegraphics[width=4cm]{pong_gym}
 \caption{Gym的Pong game}\label{fig.pong_gym}
+\end{minipage}
+}
 \end{center}
 \end{figure}
