update abstract content

--- a/IEEE/2_LiteratureReview.tex
+++ b/IEEE/2_LiteratureReview.tex
@@ -1,5 +1,5 @@
 \begin{flushleft}
-{\large \textbf{Literature Review}}\\
+{\large \timesbd{Literature Review}}\\
 \end{flushleft}
 \qquad Atari Video Computer System 是Atari Inc.在1977年9月11日發行的一款家用遊戲機，直到1982年更名為Atari 2600，Pong是第一個主要發行的遊戲。OpenAI是一個人工智慧研究實驗室，研究著重於強化學習，Gym具有多種不同的環境，並以標準化定義環境，其中包括Atari 2600的遊戲、Classic control、Box2D等環境供機器學習訓練使用。\\
 
