--- a/IEEE/0_Abstract.tex
+++ b/IEEE/0_Abstract.tex
@@ -1,7 +1,8 @@
 \begin{flushleft}
 \timesbi Abstract：\sectionef 
-本文目的是將實體機電系統簡化後導入虛擬環境並證明簡化後訓練的強化學習能算法能在模擬環境中應用。將實體冰球機的機電系統簡化後導入CoppeliaSim模擬環境透過Remote API控制環境中的冰球機移動，OpenCV來處理影像提供強化學習訓練和訓練後實際控制的輸入，強化學習訓練利用OpenAI Gym的Pong Game測試適合的訓練參數，再將算法套用到CoppeliaSim的場景中進行訓練。該研究為了證實相同的訓練算法能在2D環境上進行訓練和使用，將相同演算法套用到3D模擬環境進行訓練與使用，以驗證算法若將既有機電系統簡化成2D所測試的算法套用到3D模擬環境的可行性。\\
+本文目的是將相同的訓練算法能在2D環境上進行訓練和使用，將相同演算法套用到3D模擬環境進行訓練與使用，以驗證算法若將既有機電系統簡化成2D所測試的算法套用到3D模擬環境的可行性。將實體冰球機的機電系統簡化後導入CoppeliaSim模擬環境透過Remote API控制環境中的冰球機移動，OpenCV來處理影像提供強化學習訓練和訓練後實際控制的輸入，強化學習訓練利用OpenAI Gym的Pong Game測試適合的訓練參數，再將算法套用到CoppeliaSim的場景中進行訓練。\\%(須補概述結果)
 \end{flushleft}
 \begin{flushleft}
 \timesbi Keywords:\sectionef 類神經網路、強化學習、 CoppeliaSim、OpenAI Gym
 \end{flushleft}
+\vspace{1pt}
