--- a/IEEE/IEEE.tex
+++ b/IEEE/IEEE.tex
@@ -60,15 +60,13 @@ October 22-24, 2021, Hualien, Taiwan\\[5pt]
 Paper ID：xxxx}
 %=-------------------------本文----------------------=%
 \begin{document}
-
-
 %=-------------------------標題----------------------=%
 \begin{center}
 \quad \\[1pt]
 \fontsize{22pt}{3pt}\selectfont\hspace{0.35cm}\textbf{\sectionef Application of reinforcement learning in \\[12pt]
  mechatronic systems}\\[12pt]
 \end{center}
-%=-------------------------標題----------------------=%
+%=-------------------------作者與聯繫方式----------------------=%
 \begin{center}
 \qquad \\[27pt]
 First-Name Last-Name1, First-Name Last-Name2, First-Name Last-Name3\\[12pt]
@@ -82,7 +80,7 @@ First-Name Last-Name1, First-Name Last-Name2, First-Name Last-Name3\\[12pt]
 \fontsize{10pt}{13pt}\selectfont
 \input{0_Abstract.tex}
 \input{1_Introduction.tex}
-\input{2_LiteratureReview.tex}
+\input{2_Methodology.tex}
 \input{3_DesignProcess.tex}
 
 \end{document}
