--- a/IEEE/IEEE.tex
+++ b/IEEE/IEEE.tex
@@ -78,9 +78,11 @@ First-Name Last-Name1, First-Name Last-Name2, First-Name Last-Name3\\[12pt]
 \end{center}
 %=-------------------------內容----------------------=%
 \fontsize{10pt}{13pt}\selectfont
-\input{0_Abstract.tex}
-\input{1_Introduction.tex}
-\input{2_Methodology.tex}
-\input{3_DesignProcess.tex}
-
+\input{Abstract.tex}
+\input{Introduction.tex}
+\input{Methodology.tex}
+\input{Findings.tex}
+\input{Conclusions.tex}
+\input{Acknowledgements.tex}
+\input{References.tex}
 \end{document}
