--- a/IEEE/Conclusions.tex
+++ b/IEEE/Conclusions.tex
@@ -1,3 +1,11 @@
 \begin{flushleft}
 {\large \timesbd{Conclusions}}\\
 \end{flushleft}
+
+推斷結果的原則和概括\\
+
+工作的任何例外、問題或限制\\
+
+工作的理論和/或實踐意義\\
+
+得出的結論和建議\\
