--- a/IEEE/Methodology.tex
+++ b/IEEE/Methodology.tex
@@ -3,7 +3,7 @@
 \end{flushleft}
 
 方法論述\\
-
+強化學習是環境和agent互動並互相影響著，以獎勵的方式鼓勵學習，並且不需要特別教導。類神經網路則是透過神經元之間的非線性與權重產生記憶性並學習，以back-propagation的方式修正權重與偏差達到進步的效果。結合類神經網路和強化學習這兩種算法，使訓練不需特別教導並以獎懲的方式鼓勵最大化得分，並在固定次數訓練後back-propagation修正權重偏差。
 參考資料\\
 
 解釋研究問題\\
