--- a/IEEE/Introduction.tex
+++ b/IEEE/Introduction.tex
@@ -2,11 +2,13 @@
 \fontsize{12pt}{12pt} \timesbd{Introduction}\\
 \end{flushleft}
 
+%介紹論文的範圍和目標並說明問題
 由於機器學習的訓練需要透過長時間的訓練，測試合適的機器學習算法和參數需要長時間的測試與訓練才能得到適用的演算法，若以實體的機電系統進行訓練需要投入大量的金錢與時間成本，採取虛擬訓練的方式：在相同時間下可以訓練的次數較多實體環境中多，改善訓練時間冗長和組裝實體系統的成本。測試在2D環境中的演算法在3D環境下的可行性並評估演算法若套用到實體系統可行性。\\
 
 相關文獻\\
 
-描述方法\\
+%描述方法
+透過OpenAI Gym內建編譯的Pong 遊戲環境當作2D的訓練環境，3D則是透過CoppeilaSim來模擬訓練機電系統的運作狀況，訓練演算法選用強化學習結合類神經網路的學習方式，其中使用score function gradient當作主要算法。\\
 
 概述工作的主要結果\\
 
