add training data

--- a/IEEE/IEEE.tex
+++ b/IEEE/IEEE.tex
@@ -48,6 +48,10 @@
 [Extension = .ttf]
 \newfontfamily{\timesbd}{timesbd}%設定粗體Times New Roman字體
 [Extension = .ttf]
+%=------------------圖標----------------------=%
+
+\renewcommand{\thefigure}{\arabic{figure}}
+\renewcommand{\thesubfigure}{\alph{subfigure}}
 %=------------------頁首----------------------=%
 \usepackage{fancyhdr}%頁首頁尾
 \pagestyle{fancy}
