--- a/IEEE/Introduction.tex
+++ b/IEEE/Introduction.tex
@@ -38,3 +38,12 @@
 \end{center}
 \end{figure}
 \newpage
+\begin{figure}[ht]
+\centering
+\subbottom[My first picture\label{fig:mdleft}]%
+    {\includegraphics[width=0.4\textwidth]{冰球機}}\hfill
+\subbottom[My second picture\label{fig:mdright}]%
+    {\includegraphics[width=0.4\textwidth]{origin}}
+\caption{My two big pictures}
+\label{fig:subfigures}
+\end{figure}
