add training data

--- a/IEEE/IEEE.tex
+++ b/IEEE/IEEE.tex
@@ -7,8 +7,8 @@
 \usepackage{enumerate}
 \usepackage{amsmath,amssymb}%數學公式、符號
 \usepackage{amsfonts} %數學簍空的英文字
-\usepackage{graphicx, subfigure}%圖形
-\usepackage{caption}
+\usepackage{graphicx}%圖形
+\usepackage{caption,subcaption}
 \usepackage{fontawesome5} %引用icon
 \usepackage{type1cm} %調整字體絕對大小
 \usepackage{textpos} %設定文字絕對位置
@@ -50,8 +50,12 @@
 \newfontfamily{\timesbd}{timesbd}%設定粗體Times New Roman字體
 [Extension = .ttf]
 %=------------------圖標----------------------=%
-%\usepackage{caption}
+%\usepackage[square, numbers, comma, sort&compress]{natbib} 
+\usepackage{subcaption}
+
+%\usepackage{esint}
 %\usepackage{subcaption}
+%\usepackage{subfigure}
 %\renewcommand{\figure}{\arabic{figure}}
 %\renewcommand{\subfigure}{\alph{subfigure}}
 %=------------------頁首----------------------=%
