update training data and introduction

--- a/IEEE/Introduction.tex
+++ b/IEEE/Introduction.tex
@@ -18,10 +18,10 @@
 \begin{figure}
 \centering
 
-\subcaptionbox{Fig.\ A\label{fig:Ex_Im}}{\includegraphics[width=3cm]{冰球機}}\quad
-\subcaptionbox{Fig.\ B\label{fig:Ex_Im2}}{\includegraphics[width=6cm]{冰球機}}
-
-\caption{This is the caption.}\label{fig:Label}
+\subcaptionbox{實體的冰球機\label{fig.冰球機}}{\includegraphics[width=4cm]{冰球機}}\quad
+\subcaptionbox{虛擬環境簡化後的冰球機\label{fig.模擬冰球機}}{\includegraphics[width=4cm]{origin}}\quad
+\subcaptionbox{Gym的Pong game\label{fig.pong_gym}}{\includegraphics[width=4cm]{pong_gym}}
+\caption{冰球機與訓練環境}\label{fig.pong_gym}
 \end{figure}
 
 
