update references and methodology

--- a/IEEE/Methodology.tex
+++ b/IEEE/Methodology.tex
@@ -10,6 +10,7 @@
 解釋研究問題\\
 
 描述研究框架\\
+將對打系統的基本移動控制藉由強化學習來達到最佳化，透過Gym測試演算法可行性再進一步運用CoppeilaSim進行3D模擬環境訓練對打系統，後續可藉由冰球機結合網路攝影機將整個對打系統實際運用。
 
 應用的方法\\
 
