--- a/IEEE/References.tex
+++ b/IEEE/References.tex
@@ -1,3 +1,6 @@
 \begin{flushleft}
 {\large \timesbd{References}}\\
 \end{flushleft}
+\begin{flushleft}\sectionef
+[1]\hspace{0.35cm} \href{http://blog.shakirm.com/2015/11/machine-learning-trick-of-the-day-5-log-derivative-trick/}{\underline{http://blog.shakirm.com/2015/11/machine-learning-trick-of-the-day-5-log-derivative-trick/}}
+\end{flushleft}
