--- a/IEEE/References.tex
+++ b/IEEE/References.tex
@@ -2,5 +2,22 @@
 {\large \timesbd{References}}\\
 \end{flushleft}
 \begin{flushleft}\sectionef
-[1]\hspace{0.35cm} \href{http://blog.shakirm.com/2015/11/machine-learning-trick-of-the-day-5-log-derivative-trick/}{\underline{http://blog.shakirm.com/2015/11/machine-learning-trick-of-the-day-5-log-derivative-trick/}}
+[1]\hspace{0.35cm}\href{https://gym.openai.com/}{\underline{https://gym.openai.com/}}\\
+
+[2]\hspace{0.35cm} \href{https://www.coppeliarobotics.com/coppeliaSim}{\underline{https://www.coppeliarobotics.com/coppeliaSim}}\\[5pt]
+
+
+[3]\hspace{0.35cm}\begin{quote}\vspace{-10pt}
+\href{https://www.coppeliarobotics.com/coppeliaSim}{\underline{https://www.coppeliarobotics.com/coppeliaSim}} 強化學習是環境和agent互動並互相影響著，以獎勵的方式鼓勵學習，並且不需要特別教導。類神經網路則是透過神經元之間的非線性與權重產生記憶性並學習，以back-propagation的方式修正權重與偏差達到進步的效果。結合類神經網路和強化學習這兩種算法，使訓練不需特別教導並以獎懲的方式鼓勵最大化得分，並在固定次數訓練後back-propagation修正權重偏差。\\[5pt]
+\end{quote}
+\iffalse
+\parbox[t][5pt][l]{25pt}{[3]}
+\begin{minipage}[t]{15pt}
+  \underline{https://gym.openai.com/}
+\end{minipage}
+
+\makebox[25pt][l]{[3]}\makebox[45pt][l]{\raisebox{-3ex}[5\height]{\underline{https://gym.openai.com/}https://gym.openai.com/https://gym.openai.com/https://gym.openai.com/https://gym.openai.com/https://gym.openai.com/https://gym.openai.com/}}
+
+\makebox[25pt][l]{[3]}\makebox[45pt][l]{\raisebox{-3ex}[5\height]{\underline{https://gym.openai.com/}}}
+\fi
 \end{flushleft}
