add test reference

--- a/IEEE/IEEE.tex
+++ b/IEEE/IEEE.tex
@@ -88,4 +88,5 @@ First-Name Last-Name1, First-Name Last-Name2, First-Name Last-Name3\\[12pt]
 \input{Conclusions.tex}
 \input{Acknowledgements.tex}
 \input{References.tex}
+%\input{test_reference.tex}
 \end{document}
