--- a/IEEE/References.tex
+++ b/IEEE/References.tex
@@ -2,14 +2,13 @@
 {\large \timesbd{References}}\\
 \end{flushleft}
 \begin{flushleft}\sectionef
-[1]\hspace{0.35cm}\href{https://gym.openai.com/}{\underline{https://gym.openai.com/}}\\
+[1]\hspace{0.35cm}\href{https://gym.openai.com/}{\underline{https://gym.openai.com/}}\\[12pt]
 
-[2]\hspace{0.35cm} \href{https://www.coppeliarobotics.com/coppeliaSim}{\underline{https://www.coppeliarobotics.com/coppeliaSim}}\\[5pt]
+[2]\hspace{0.35cm} \href{https://www.coppeliarobotics.com/coppeliaSim}{\underline{https://www.coppeliarobotics.com/coppeliaSim}}\\[12pt]
 
 
-[3]\hspace{0.35cm}\begin{quote}\vspace{-10pt}
-\href{https://www.coppeliarobotics.com/coppeliaSim}{\underline{https://www.coppeliarobotics.com/coppeliaSim}} 強化學習是環境和agent互動並互相影響著，以獎勵的方式鼓勵學習，並且不需要特別教導。類神經網路則是透過神經元之間的非線性與權重產生記憶性並學習，以back-propagation的方式修正權重與偏差達到進步的效果。結合類神經網路和強化學習這兩種算法，使訓練不需特別教導並以獎懲的方式鼓勵最大化得分，並在固定次數訓練後back-propagation修正權重偏差。\\[5pt]
-\end{quote}
+[3]\hspace{0.35cm} \href{https://www.coppeliarobotics.com/coppeliaSim}{\underline{https://www.coppeliarobotics.com/coppeliaSim}} 強化學習是環境和agent互動並互相影響著，以獎勵的方式鼓勵學習，並且不需要特別教導。類神經網路則是透過神經元之間的非線性與權重產生記憶性並學習，以back-propagation的方式修正權重與偏差達到進步的效果。結合類神經網路和強化學習這兩種算法，使訓練不需特別教導並以獎懲的方式鼓勵最大化得分，並在固定次數訓練後back-propagation修正權重偏差。\\[12pt]
+
 \iffalse
 \parbox[t][5pt][l]{25pt}{[3]}
 \begin{minipage}[t]{15pt}
