--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -37,7 +37,7 @@ left=3truecm,right=2.5truecm]{geometry}
 \renewcommand{\lstlistingname}{\Large 程式.} %設定程式標示名稱
 \hoffset=-5mm %調整左右邊界
 \voffset=-8mm %調整上下邊界
-\setlength{\parindent}{2em}%設定首行行距縮排
+\setlength{\parindent}{3em}%設定首行行距縮排
 \usepackage{appendix} %附錄
 \usepackage{diagbox}%引用表格
 \usepackage{multirow}%表格置中
@@ -137,7 +137,7 @@ Application of reinforcement
     \fontsize{16pt}{16pt}\selectfont \makebox[6em][s]{系主任}\enspace:\quad \underline{　　　　　　　　　　　　}\\
     \hspace*{\fill} \\
     \fontsize{16pt}{2.5pt}\selectfont \makebox[12em][s]{中華民國一一零年}\hspace{2pt}
-    \fontsize{16pt}{2.5pt}\selectfont\makebox[8em][s]{八月十七日}
+    \fontsize{16pt}{2.5pt}\selectfont\makebox[8em][s]{六月二十日}
     \end{flushleft}}
     \end{textblock}}
     \end{textblock}}
