--- a/LaTeX報告/1_introduction.tex
+++ b/LaTeX報告/1_introduction.tex
@@ -27,11 +27,11 @@
 
 
 \section{研究目的與方法}
-本研究分三大部分，第一運用OpenAI Gym裡內建編譯的ATARI 2600遊戲Pong-v0，來作為訓練環境，加上強化學習的理論，測試不同演算法以訓練出最佳化的對打系統，第二換為CoppilaSim模擬環境並套用訓練程式，成為優化的對打機電系統。第三則是透過架設伺服器與虛擬環境結合。\\
+本研究分三大部分，第一運用OpenAI Gym裡內建編譯的ATARI 2600遊戲Pong-v0，來作為訓練環境，加上強化學習的理論，測試不同演算法以訓練出最佳化的對打系統，第二將整個簡化後冰球機導入CoppilaSim模擬環境並嘗試進行虛擬訓練，成為優化的對打機電系統。第三則是嘗試透過架設伺服器與虛擬環境結合。\\
  
 透過簡化實體冰球機並導入虛擬環境，進行虛擬訓練，使用Gym的Pong當作對應的2D虛擬訓練環境，測試算法和訓練效果，篩選適合的算法與參數。\\
 
-建置CoppilaSim模擬環境，嘗試將2D訓練概念套用到3D環境進行測試，加入電腦視覺與RemoteAPI，電腦視覺抓取球與擊錘的位置，透過RemoteAPI進行遠端控制，在3D環境測試可確保後續套用到實體機器上的可行性。\\
+建置CoppilaSim模擬環境，嘗試將2D訓練概念套用到3D環境進行測試，加入電腦視覺與RemoteAPI，電腦視覺抓取球與擊錘的位置，透過RemoteAPI進行遠端控制，在3D環境測試算法可確保後續套用到實體機器上的可行性。\\
  
  再透過架設伺服器與虛擬環境結合：讓虛擬環境的影像透過網伺服器串流影像供使用者遠端進行操控虛擬環境的擊錘進行打球，或是提供多人進行觀看對打影像。
 \begin{figure}[hbt!]
