report merge ch6

--- a/LaTeX報告/4_simulation.tex
+++ b/LaTeX報告/4_simulation.tex
@@ -42,11 +42,9 @@
  RemoteAPI(Remote Application Programming Interface)是CoppeliaSim API框架的一部分。它允許CoppeliaSim與外部應用程序之間的通訊，是跨平台並支持服務調用和雙向數據流。有兩個不同的版本/框架分別為:Remote API 和The B0-based remote API。\\
 \subsection{PyRep}
 
-\subsection{模擬}
+\subsection{常用功能}
 \begin{enumerate}
-
-\item 功能說明\\
-以下為簡易功能說明:
+\item 以下為簡易功能說明:
 \begin{figure}[hbt!]
 \center
 \includegraphics[width=11cm]{toolBar}
